--- a/Morpho/main/templates/main/base.html
+++ b/Morpho/main/templates/main/base.html
@@ -1,27 +1,27 @@
 {% load static %}
+{%load bootstrap_icons%}
 <!DOCTYPE html>
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
- <!-- 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
- -->
+ <link rel=”stylesheet” href=”https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css” />
+ <link rel="stylesheet" href="{% static 'css/morpho.css' %}">
 
+{%block scripts%}
+{% endblock %}
  <title>{% block title %}base {% endblock %}</title>
 </head>
-<body>
+<body class="morpho-bg">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+  <nav class="navbar navbar-expand-lg navbar-dark morpho-nav">
+    {% if user.is_authenticated %}
+    <a class="navbar-brand h1 py-auto" href="{% url 'Home' %}">
       <img src="{% static 'images/morphoIcon.png' %}" 
       height="30px" width="30px" alt="Morpho Company icon">
-      Morpho
+      MORPHO
     </a>
-    {% if user.is_authenticated %}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       
       <span class="navbar-toggler-icon"></span>
@@ -29,38 +29,61 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        {% if '/create/' in request.path %}
+        <li class="nav-item active morpho-btn">
+          <a class="nav-link h2 py-auto text-dark" href="{% url 'Create'%}">
+            <span class="fa-lg"> {% bs_icon 'plus-circle' size='1.2em'%}</span>
+              CREATE</a>
+            </li>
+        {% else %}
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link h2 py-auto" href="{% url 'Create'%}">
+            <span class="fa-lg"> {% bs_icon 'plus-circle' size='1.2em'%}</span>
+              CREATE</a>
+            </li>
+        {% endif %}
+         
+        {% if '/compile/' in request.path %}
+        <li class="nav-item active morpho-btn">
+          <a class="nav-link h2 text-dark" href="{% url 'ChooseContainer'%}">
+            {%bs_icon 'puzzle-fill' size='1.2em'%}
+            COMPILE</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+        {% else %}
+        <li class="nav-item active">
+          <a class="nav-link h2" href="{% url 'ChooseContainer'%}">
+            {%bs_icon 'puzzle-fill' size='1.2em'%}
+            COMPILE</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
+        {% endif %}
+          
+        {% if '/view/' in request.path %}
+        <li class="nav-item active morpho-btn">
+          <a class="nav-link h2 text-dark" href="{% url 'View' %}">
+            {% bs_icon 'eye-fill' size='1.2em' %}
+            VIEW</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        {% else %}
+        <li class="nav-item active">
+          <a class="nav-link h2" href="{% url 'View' %}">
+            {% bs_icon 'eye-fill' size='1.2em' %}
+            VIEW</a>
         </li>
+        {% endif %}
+          
+       
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
     {% else %}
-
+      <ul class=" navbar-nav mx-auto display-4">
+        <li class="nav-item">
+          M O R P H O
+        </li>
+      </ul>
     {% endif %}
   </nav>
 
-
+  
 {% block content %}
 
 {% endblock %}
