--- a/Morpho/main/templates/main/compileContainer.html
+++ b/Morpho/main/templates/main/compileContainer.html
@@ -24,7 +24,7 @@ function rotateOnClick(pass_id){
 
 {% block content %}  
 <div class="mx-4 my-4">
-    <p class="display-4">Your Library</p>
+    <p class="display-4">Choose a Container</p>
 </div>
 
 <div class="mx-4">
@@ -38,12 +38,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
         {% for i in creations.ideas %}
         <div class=" mx-3 my-2 card"> 
-            <a href="{% url 'ViewCreation' type='Idea' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+            <a href="{% url 'ChooseComponents' type='Idea' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
             <div class="card-body">
               <h5 class="card-title">{{i.name}}</h5>
               <hr style=" border-top: 2px dashed black;">
               <p class="card-text">Updated {{i.last_modified}}</p>
-              <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+               
                 </div></a>
            </div>
         {% empty %}
@@ -65,12 +65,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.themes %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Theme' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Theme' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
@@ -91,12 +91,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.chapters %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Chapter' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Chapter' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
@@ -117,12 +117,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.characters %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Character' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Character' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
@@ -143,12 +143,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.poems %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Poem' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Poem' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
@@ -169,12 +169,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.books %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Book' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Book' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
@@ -195,12 +195,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.series %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Series' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Series' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
@@ -221,12 +221,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.anthologies %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Anthology' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Anthology' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
@@ -247,12 +247,12 @@ function rotateOnClick(pass_id){
         <div class="d-flex flex-row mt-3"> 
             {% for i in creations.media %}
             <div class=" mx-3 my-2 card"> 
-                <a href="{% url 'ViewCreation' type='Media' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
+                <a href="{% url 'ChooseComponents' type='Media' id=i.id%}" class="card-block stretched-link text-decoration-none morpho-btn">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <hr style=" border-top: 2px dashed black;">
                   <p class="card-text">Updated {{i.last_modified}}</p>
-                  <p class="card-text float-right pb-2">Click to {% bs_icon 'eye-fill' %} view</p>
+                   
                     </div></a>
                </div>
                {% empty %}
