--- a/Morpho/register/templates/registration/login.html
+++ b/Morpho/register/templates/registration/login.html
@@ -7,29 +7,26 @@
 {% load crispy_forms_tags %}
 
 {%block content%}
-<div class="container">
+<div class="d-flex justify-content-center align-items-center morpho-login-bg" >
 
-<div class="row my-4">
-    <div class="col">
-        <img src="{% static 'images/loginButterfly.png' %}" class="d-inline-block align-top" alt="Butterfly Image">
-    </div>
 
-    <div class="col">
-        <div class="w-75 h-100 py-5">
+
+<div class="morpho-circle-login morpho-bg d-flex">
+    <div class="my-auto mx-auto">
+        <p class="h1 text-center morpho-login-title">M O R P H O</p>
+        <p class="h3 text-cetner">Your Stories, Your Way</p>
+
     <form method="post" class="form=group">
         {%csrf_token%}
         {{form|crispy}}
-        <button type="submit" class="btn btn-success">Login</button>
+        <div class="d-flex">
+        <button type="submit" class="mx-auto btn morpho-btn">Login</button>
+        </div>
         <p>Don't Have An Account? Create one <a href="/register">here</a></p>
-
+        
     </form>
     </div>
-    </div>
 </div>
-<div class="row">
-    <div class="col">
-    <p class="display-4 text-center text-primary">Your Stories. Your Way</p>
-    </div>
-</div>
+
 </div>
 {%endblock%}
